--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </li>
           </ul>
         </nav>
-	<h3 class="text-muted">合同会社たけのこテック</h3>
+	<h3><img id="nav_mark" src="images/mark.png" class="img-fluid"></h3>
       </div>
 
       <div class="jumbotron">
