業務内容をbootstrapのcardにした

--- a/index.html
+++ b/index.html
@@ -36,37 +36,83 @@
 	<h3><img id="nav_mark" src="images/mark.png" class="img-fluid"></h3>
       </div>
 
-      <div class="jumbotron">
-        <h1 class="display-3"><img src="images/logo.png" class="img-fluid" ></h1>
-        <p class="lead">
-合同会社たけのこテックでは2014年の創立以来、
-高品質のシステムをクライアントの皆様に提供させていただいています。<br />
-琵琶湖の畔に所在する当社では3名の社員が働いており、
-様々な形で情報技術や電子技術の提供を行っております。
-	</p>
+      <div class="row">
+	      <div class="col-lg-12">
+<div class="card">
+  <img class="card-img-top" src="images/logo.png" alt="Card image cap">
+  <div class="card-block">
+	  <p class="card-text">合同会社たけのこテックでは2014年の創立以来、 高品質のシステムをクライアントの皆様に提供させていただいています。
+琵琶湖の畔に所在する当社では3名の社員が働いており、 様々な形で情報技術や電子技術の提供を行っております。</p>
+  </div>
+</div>
+		      
+	      </div>
       </div>
-
       <div class="row marketing">
         <div class="col-lg-6">
-          <h4>アプリケーション開発</h4>
-          <p>業務のサポートを行うWebアプリケーション開発や研究に用いるソフトウェアの開発等を行っております．</p>
 
-          <h4>電子回路の設計・制作</h4>
-          <p>電子回路の設計から完成品の納品まで，多数の実績がございます．</p>
+<div class="card">
+  <h4 class="card-header">アプリケーション開発</h4>
+  <div class="card-block">
+    <p class="card-text">
+          業務のサポートを行うWebアプリケーション開発や研究に用いるソフトウェアの開発等を行っております．
+    </p>
+  </div>
+</div>
+		
 
-          <h4>サーバーのセットアップ，管理</h4>
-	  <p>中小企業の社内サーバーのセットアップやネットワーク設計・構築，内線のIP電話網の設定等の実績があります．</p>
+
+<div class="card">
+  <h4 class="card-header">電子回路の設計・制作</h4>
+  <div class="card-block">
+    <p class="card-text">
+          電子回路の設計から完成品の納品まで，多数の実績がございます．
+    </p>
+  </div>
+</div>
+
+
+<div class="card">
+  <h4 class="card-header">サーバーのセットアップ，管理</h4>
+  <div class="card-block">
+    <p class="card-text">
+	  中小企業の社内サーバーのセットアップやネットワーク設計・構築，内線のIP電話網の設定等の実績があります．
+    </p>
+  </div>
+</div>
+
         </div>
 
         <div class="col-lg-6">
-          <h4>システムアドバイザー・コンサルタント</h4>
-          <p>業務の電子化を進めていく際，実際の業務内容等を考慮した提案をさせて頂きます．</p>
 
-          <h4>ほげほげ</h4>
-          <p>ここになにかここに何かココに何か</p>
+<div class="card">
+  <h4 class="card-header">システムアドバイザー・コンサルタント</h4>
+  <div class="card-block">
+    <p class="card-text">
+          業務の電子化を進めていく際，実際の業務内容等を考慮した提案をさせて頂きます．
+    </p>
+  </div>
+</div>
 
-          <h4>Subheading</h4>
-          <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+
+
+<div class="card">
+  <h4 class="card-header">fuga</h4>
+  <div class="card-block">
+    <p class="card-text">
+          Fuga
+    </p>
+  </div>
+</div>
+
+<div class="card">
+  <h4 class="card-header">hoge</h4>
+  <div class="card-block">
+    <p class="card-text">
+          hogehoge
+    </p>
+  </div>
+</div>
         </div>
       </div>
 
