内容を少々追加

--- a/index.html
+++ b/index.html
@@ -55,8 +55,15 @@
   <h4 class="card-header">アプリケーション開発</h4>
   <div class="card-block">
     <p class="card-text">
-          業務のサポートを行うWebアプリケーション開発や研究に用いるソフトウェアの開発等を行っております．
+      業務のサポートを行うWebアプリケーション開発や研究に用いるソフトウェアの開発等を行っております．
     </p>
+    <ul>
+      <li>業務システム（出退勤管理、社内規程閲覧、社内報配信など）</li>
+      <li>海上交通流シミュレーション計算結果データ抽出・加工プログラム</li>
+      <li>AISによるリアルタイム船舶位置情報表示システム</li>
+      <li>粒子法シミュレーション結果レンダリング</li>
+      <li>シミュレーションシステムの高速化</li>
+    </ul>
   </div>
 </div>
 		
@@ -66,7 +73,18 @@
   <h4 class="card-header">電子回路の設計・制作</h4>
   <div class="card-block">
     <p class="card-text">
-          電子回路の設計から完成品の納品まで，多数の実績がございます．
+      電子回路の設計から完成品の納品まで，多数の実績がございます．
+    </p>
+    <ul>
+      <li>多機能インターフェース基板</li>
+      <li>センサーアンプ</li>
+      <li>フレキシブルセンサー基板</li>
+      <li>アクチュエータ制御基板</li>
+      <li>小型5軸DCモーター制御基板</li>
+      <li>ワイヤレス充電検証基板</li>
+    </ul>
+    <p>
+      ※実験装置やロボットの開発に係る実験補助なども承ります
     </p>
   </div>
 </div>
