--- a/index.html
+++ b/index.html
@@ -36,20 +36,14 @@
 	<h3><img id="nav_mark" src="images/mark.png" class="img-fluid"></h3>
       </div>
 
-      <div class="row">
-	      <div class="col-lg-12">
 <div class="card">
-  <img class="card-img-top" src="images/logo.png" alt="Card image cap">
+  <img class="card-img-top company-logo" src="images/logo.png" alt="Card image cap">
   <div class="card-block">
 	  <p class="card-text">合同会社たけのこテックでは2014年の創立以来、 高品質のシステムをクライアントの皆様に提供させていただいています。
 琵琶湖の畔に所在する当社では3名の社員が働いており、 様々な形で情報技術や電子技術の提供を行っております。</p>
   </div>
 </div>
 		      
-	      </div>
-      </div>
-      <div class="row marketing">
-        <div class="col-lg-6">
 
 <div class="card">
   <h4 class="card-header">アプリケーション開発</h4>
@@ -99,9 +93,6 @@
   </div>
 </div>
 
-        </div>
-
-        <div class="col-lg-6">
 
 <div class="card">
   <h4 class="card-header">システムアドバイザー・コンサルタント</h4>
@@ -112,27 +103,6 @@
   </div>
 </div>
 
-
-
-<div class="card">
-  <h4 class="card-header">fuga</h4>
-  <div class="card-block">
-    <p class="card-text">
-          Fuga
-    </p>
-  </div>
-</div>
-
-<div class="card">
-  <h4 class="card-header">hoge</h4>
-  <div class="card-block">
-    <p class="card-text">
-          hogehoge
-    </p>
-  </div>
-</div>
-        </div>
-      </div>
 
       <footer class="footer">
         <p>&copy; 2014- Takenoko Tech LLC. All rights reserved.</p>
