recruitの追加，その他微調整

--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
               <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Recruit</a>
+              <a class="nav-link" href="recruit.html">Recruit</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
             </li>
           </ul>
         </nav>
-	<h3><img id="nav_mark" src="images/mark.png" class="img-fluid"></h3>
+	<h3><a href="/"><img id="nav_mark" src="images/mark.png" class="img-fluid"></a></h3>
       </div>
 
-<div class="card">
+<div class="card card-borderless">
   <img class="card-img-top company-logo" src="images/logo.png" alt="Card image cap">
   <div class="card-block">
 	  <p class="card-text">合同会社たけのこテックでは2014年の創立以来、 高品質のシステムをクライアントの皆様に提供させていただいています。
