--- a/recruit.html
+++ b/recruit.html
@@ -26,10 +26,10 @@
               <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="recruit.html">Recruit</a>
+              <a class="nav-link active" href="#">Recruit <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#">Contact <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="contact.html">Contact</a>
             </li>
           </ul>
         </nav>
@@ -38,11 +38,21 @@
 
 
 <div class="card">
-  <h4 class="card-header">問い合わせ先</h4>
+  <h4 class="card-header">Webエンジニア，インフラ系</h4>
   <div class="card-block">
     <p class="card-text">
-      お問い合わせは下記連絡先よりお願いします．<br />
-      <a href="mailto:info@takenoko-tech.co.jp">info@takenoko-tech.co.jp</a>
+    弊社ではPythonプログラマーやサーバーエンジニアを募集しています．<br />
+      特にDjangoでアプリケーション開発経験が在る方は大歓迎です．
+    </p>
+  </div>
+</div>
+
+<div class="card">
+  <h4 class="card-header">電子回路，組み込み機器開発</h4>
+  <div class="card-block">
+    <p class="card-text">
+    電子回路，基板の設計，組み込み機器のプログラミング等のエンジニアを募集しています．<br />
+      モータードライバの設計に自身がある方等，遠慮せずに御連絡下さい．
     </p>
   </div>
 </div>
