--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </div>
 		      
 
-<div class="card">
+<div class="card mb-3">
   <h4 class="card-header">アプリケーション開発</h4>
   <div class="card-block">
     <p class="card-text">
@@ -63,7 +63,7 @@
 		
 
 
-<div class="card">
+<div class="card mb-3">
   <h4 class="card-header">電子回路の設計・制作</h4>
   <div class="card-block">
     <p class="card-text">
@@ -84,7 +84,7 @@
 </div>
 
 
-<div class="card">
+<div class="card mb-3">
   <h4 class="card-header">サーバーのセットアップ，管理</h4>
   <div class="card-block">
     <p class="card-text">
@@ -94,7 +94,7 @@
 </div>
 
 
-<div class="card">
+<div class="card mb-3">
   <h4 class="card-header">システムアドバイザー・コンサルタント</h4>
   <div class="card-block">
     <p class="card-text">
