--- a/recruit.html
+++ b/recruit.html
@@ -37,7 +37,7 @@
       </div>
 
 
-<div class="card">
+<div class="card mb-3">
   <h4 class="card-header">Webエンジニア，インフラ系</h4>
   <div class="card-block">
     <p class="card-text">
@@ -47,7 +47,7 @@
   </div>
 </div>
 
-<div class="card">
+<div class="card mb-3">
   <h4 class="card-header">電子回路，組み込み機器開発</h4>
   <div class="card-block">
     <p class="card-text">
