--- a/recruit.html
+++ b/recruit.html
@@ -52,7 +52,7 @@
   <div class="card-block">
     <p class="card-text">
     電子回路，基板の設計，組み込み機器のプログラミング等のエンジニアを募集しています．<br />
-      モータードライバの設計に自身がある方等，遠慮せずに御連絡下さい．
+      モータードライバの設計に自信がある方等，遠慮せずに御連絡下さい．
     </p>
   </div>
 </div>
