#6 AWS 案件について記載

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
       <li>AISによるリアルタイム船舶位置情報表示システム</li>
       <li>粒子法シミュレーション結果レンダリング</li>
       <li>シミュレーションシステムの高速化</li>
+      <li>お客様が開発した独自開発のソフトウェアをWebで提供するSaaSの開発</li>
     </ul>
   </div>
 </div>
@@ -79,6 +80,15 @@
     </ul>
     <p>
       ※実験装置やロボットの開発に係る実験補助なども承ります
+    </p>
+  </div>
+</div>
+
+<div class="card mb-3">
+  <h4 class="card-header">クラウドを活用するシステムのアーキテクト</h4>
+  <div class="card-block">
+    <p class="card-text">
+	  クラウドを利用したアプリケーションの開発や既存システムの移行、インフラストラクチャの構築において実績がございます。
     </p>
   </div>
 </div>
