--- a/recruit.html
+++ b/recruit.html
@@ -38,11 +38,12 @@
 
 
 <div class="card mb-3">
-  <h4 class="card-header">Webエンジニア，インフラ系</h4>
+  <h4 class="card-header">Webエンジニア，インフラ，クラウド</h4>
   <div class="card-block">
     <p class="card-text">
-    弊社ではPythonプログラマーやサーバーエンジニアを募集しています．<br />
-      特にDjangoでアプリケーション開発経験が在る方は大歓迎です．
+    弊社ではプログラマーやサーバーエンジニアを募集しています．<br />
+    特に Django でアプリケーション開発経験がある方は大歓迎です．その他言語についてもフロントエンド含め募集しています．<br />
+    AWS での構築経験や有資格者も大歓迎です．
     </p>
   </div>
 </div>
