--- a/contact.html
+++ b/contact.html
@@ -41,8 +41,7 @@
   <h4 class="card-header">問い合わせ先</h4>
   <div class="card-block">
     <p class="card-text">
-      お問い合わせは下記連絡先よりお願いします．<br />
-      <a href="mailto:info@takenoko-tech.co.jp">info@takenoko-tech.co.jp</a>
+      お問い合わせは<a href="https://form.run/@takenoko-tech">フォーム</a>よりお願いします。
     </p>
   </div>
 </div>
